2005-11-29  Patrick Lam  <plam@mit.edu>
	* src/fcint.h (FcCacheBankToIndex);

	Fix segfault by guarding array dereference.

2005-11-29  Dirk Mueller  <dmueller@suse.de>
	reviewed by: plam
	
	* fc-lang/fc-lang.c:
	* src/fccache.c (FcDirCacheConsume, FcCacheHaveBank,
			 FcCacheBankToIndex, FcCacheBankToIndexMTF,
			 FcCacheAddBankDir):
	* src/fcint.h:

	Refactor FcCacheBankToIndex into an inlineable part
	(in fcint.h) which checks the front of the list and a
	non-inlineable part which finds and moves the appropriate element
	to the front of the list.

2005-11-29  Patrick Lam  <plam@mit.edu>
	* src/fccfg.c (FcConfigBuildFonts):
	* src/fccache.c (FcCacheReadDirs):

	Make the perf guys hate me a bit less: hoist the directory-name
	FcConfigAcceptFont check for cached fonts up to directory cache
	read time, rather than running it for each font.

2005-11-29  Patrick Lam  <plam@mit.edu>
	* src/fccfg.c (FcConfigBuildFonts):
	* src/fcint.h:
	* src/fcpat.c (FcPatternFindFullFname):

	Don't make FcPatternFindFullFname available to fccfg, it's not
	really safe.  Instead go through FcPatternGetString (sorry,
	perf guys.)  Also, use globs for dirs as well.

2005-11-28  Patrick Lam  <plam@mit.edu>
	* src/fccfg.c (FcConfigBuildFonts):

	Fix segfault.

2005-11-28  Patrick Lam  <plam@mit.edu>
	* src/fcint.h:
	* src/fcpat.c (FcPatternFindFullFname):
	* src/fccfg.c (FcConfigBuildFonts):

	Fix problem dating back at least to 2.3.2 where globs weren't
	being applied to patterns loaded from a cache.

2005-11-28  Patrick Lam  <plam@mit.edu>
	* doc/fontconfig-user.sgml:

	Fix some obvious spelling mistakes.
	
2005-11-28  Dirk Mueller  <dmueller@suse.com>
	    Stephan Kulow  <coolo@suse.de>
	reviewed by: plam

	* src/fcmatch.c (FcFontSetMatch):

	Don't kill all fonts during match (oops!)


2005-11-25  Dirk Mueller  <dmueller@suse.com>
            Stephan Kulow  <coolo@suse.de>
            Michael Matz  <matz@suse.de>
        reviewed by: plam
